Fix account actions gaps

--- a/styles.css
+++ b/styles.css
@@ -92,6 +92,7 @@ body {
     display: grid;
     grid-template-columns: 1fr repeat(2, 5fr);
     align-items: center;
+    gap: 1rem;
 }
 
 .account_actions .propic {
@@ -113,7 +114,7 @@ body {
     display: flex;
     gap: 20px;
     align-items: center;
-    justify-content: space-around;
+    justify-content: center;
     padding: 30px;
 }
 
